# cmake_module_example

./: README.md
legacy/: CMakeLists.txt  tutorial.cxx
legacy/MathFunctions/: CMakeLists.txt
legacy/MathFunctions/include/: MathFunctions.h
legacy/MathFunctions/src/: MathFunctions.cxx
module_1/: CMakeLists.txt  tutorial.cxx
module_1/MathFunctions/: CMakeLists.txt  MathFunctions.cppm
module_1/MathFunctions/src/: MathFunctions.cxx  mysqrt.cppm
module_2/: CMakeLists.txt  tutorial.cxx
module_2/MathFunctions/: CMakeLists.txt  MathFunctions.cppm
module_2/MathFunctions/src/: mysqrt.cppm
transform_1/: CMakeLists.txt  tutorial.cxx
transform_1/MathFunctions/: CMakeLists.txt  MathFunctions.cppm
transform_2/: CMakeLists.txt
transform_2/MathFunctions/: MathFunctions.cppm
transform_2/MathFunctions/src/: mysqrt.cxx
transform_3/MathFunctions/: CMakeLists.txt  MathFunctions.cppm
transform_3/MathFunctions/include/: MathFunctions.h  mysqrt.h
transform_3/MathFunctions/src/: MathFunctions.cxx  mysqrt.cxx
